k8s/deploy-webapp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: weather-forecast
  name: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      service: webapp
  template:
    metadata:
      labels:
        app: weather-forecast
        service: webapp
    spec:
      containers:
      - env:
        - name: ASPNETCORE_URLS
          value: http://+:80
        - name: WebApiBaseAddress
          value: http://webapi
        - name: HelloFrontendPhrase
          value: HELLO_FRONTEND_PHRASE
        #image: exploredockerducciomugnaini.azurecr.io/webapp:v3
        image: digistatcontainerregistry.azurecr.io/webapp:v1
        imagePullPolicy: IfNotPresent
        name: webapp
        ports:
        - containerPort: 80
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: webapp
  labels:
    app: weather-forecast
    service: webapp
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    service: webapp
